# br-vr

./: .gitignore  CMakeLists.txt  DEV_AI.md  README.md  package.xml  setup.py
DOC/: ARCHITECTURE.md  DATA_NODE_INGEST_AND_EVENTS_SPEC.md  DATA_NODE_OPERATOR_SESSION_SPEC.md  DATA_NODE_PEAQ_CLAIM_SPEC.md  DATA_NODE_ROBOT_INCIDENT_SESSION_SPEC.md  DATA_NODE_TELEOP_RECOVERY_INGEST_SPEC.md  HBR.md  PROJECT_STATE.md  RAID_APP_DATASET_PROXY_SPEC.md  RAID_APP_DATA_NODE_CORRELATION_SPEC.md  RAID_APP_PEAQ_CLAIM_SPEC.md  README.md  TELEOP_DATAS.md  TELEOP_SESSION_LIFECYCLE_AND_FAILURES.md  TODO.md  VR_APP_TELEOP_ROS_CONTRACT.md
config/: dataset_recorder.yaml  teleop.yaml  vr_remapper.yaml
docs/: ARCHITECTURE.md  HBR.md  PROJECT_STATE.md  TELEOP_DATAS.md
launch/: teleop.launch  teleop_debug.launch  teleop_fetch.launch
scripts/: calibration_node.py  dataset_recorder_node.py  dataset_upload_server.py  dataset_web_server.py  fetcher.py  pose_source_node.py  teleop_node.py  vr_remapper_node.py
src/teleop_fetch/: __init__.py  config.py  correlation_metadata.py  episode_recorder.py  hbr_writer.py  head_controller.py  operator_buttons.py  record_types.py  start_stop_controller.py  upload_models.py  vr_adapter.py
src/teleop_fetch/sensors/: __init__.py  base_camera.py  base_imu.py  base_joint_sensor.py  ros_camera.py  ros_imu.py  ros_joint_sensor.py
srv/: ReceiveGrant.srv  SetPeaqDatasetClaim.srv
test/: teleop_kyr_arm_stream.test  test_teleop_kyr_arm_stream.py
tests/: test_data_node_correlation_metadata.py  test_operator_buttons.py  test_teleop_state_contract.py  test_upload_payload_session_fields.py
web/: dataset_dashboard.html  teleop_debug.html
