<?xml version="1.0"?>
<package format="2">
  <name>teleop_fetch</name>
  <version>2.0.0</version>
  <description>VR teleoperation package for dual-arm robots on ROS1 Noetic (Quest VR headset)</description>
  <license>BSD</license>
  <maintainer email="ainex@todo.todo">ainex</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ainex_interfaces</build_depend>
  <build_depend>ros_robot_controller</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ainex_interfaces</exec_depend>
  <exec_depend>ros_robot_controller</exec_depend>
  <exec_depend>robot</exec_depend>
  <exec_depend>my_package</exec_depend>

  <export>
  </export>
</package>
